fixed some alignment css alignment. Still have more of it to do.

--- a/src/components/InputField/InputField.css
+++ b/src/components/InputField/InputField.css
@@ -11,6 +11,7 @@
   text-align: center;
   padding: 10px 15px;
   margin-right: 10px;
+  margin-bottom: 10px;
   transition: 300ms border-color;
 }
 
@@ -22,6 +23,6 @@
   outline: none;
 }
 
-.input__button {
+.inputButton {
   cursor: pointer;
 }
