--- a/src/containers/LogoContainer/LogoContainer.css
+++ b/src/containers/LogoContainer/LogoContainer.css
@@ -1,10 +1,14 @@
 .container {
-  border: 1px solid #3a3a3a;
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  /* max-width: 600px; */
+  margin: 0px 40px;
 }
 
 .flex{
-  flex: 1;
+  flex-basis: 20%;
+  border: 1px solid #3a3a3a;
 }
 
 .available {
