--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 .invalidMessageContainer {
-   padding: 20px 0px;
+   height: 40px;
 }
 
 .invalidMessageText {
